[feat] 最新のIAM APIドキュメントを取り込む
