# src/app/iam/api/models.ts
@@ -1,5 +1,6 @@
 export { LoginUserPasswordUpdateRequest } from "./models/login-user-password-update-request";
 export { UserGroupUpsertRequest } from "./models/user-group-upsert-request";
+export { UserCreateRequest } from "./models/user-create-request";
 export { LoginRequest } from "./models/login-request";
 export { UserGroupResponse } from "./models/user-group-response";
 export { UserResponse } from "./models/user-response";
